--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>My Resume</title>
+    <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html">Cover Letter</a>
+        <a href="">About Me</a>
+        <a href="">Work History</a>
+        <a href="">Skills</a>
+        <a href="">Portfolio</a>
+        <a href="">Contact</a>
+      </nav>
+    </header>
+    <div class="hero">
+      <div class="hero-left">
+        <img src="">
+      </div>
+      <div class="hero-right">
+        <h1>Ken Ruf</h1>
+      </div>
+    </div>
+  </body>
 </html>
