added hero div, headshot, and intro

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>My Resume</title>
+    <title>Ken Ruf - Resume</title>
 
     <link rel="stylesheet" href="css/index.css">
 
@@ -16,20 +16,37 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">Cover Letter</a>
-        <a href="">About Me</a>
-        <a href="">Work History</a>
-        <a href="">Skills</a>
-        <a href="">Portfolio</a>
-        <a href="">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="#work-history">Work History</a>
+        <a href="#skills">Skills</a>
+        <a href="https://HaBuDeSu.github.io">Portfolio</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
-    <div class="hero">
-      <div class="hero-left">
-        <img src="">
-      </div>
-      <div class="hero-right">
-        <h1>Ken Ruf</h1>
+    <div class="container">
+      <div class="hero">
+        <div class="hero-left">
+          <img src="Headshot.jpg" class="headshot">
+        </div>
+        <div class="hero-right">
+          <h1>Ken Ruf</h1>
+          <p>5 years ago I was an online poker player who didn't know what a startup was. I stumbled upon a YouTube video of an Elon Musk interview and it inspired me to look at the world and find a problem to solve.</p>
+        </div>
+        <div id="work-history">
+          <h2>Work History</h2>
+          <table>
+            <tr>
+              <th>Company</th>
+              <td>GrowthLoop</td>
+              <td>Inspired eLearning</td>
+              <td>Valde Capital</td>
+              <td>Self-Employed</td>
+            </tr>
+          </table>
+        </div>
+        <div id="skills">
+        </div>
+
       </div>
     </div>
   </body>
