added work history

--- a/index.html
+++ b/index.html
@@ -32,21 +32,34 @@
           <h1>Ken Ruf</h1>
           <p>5 years ago I was an online poker player who didn't know what a startup was. I stumbled upon a YouTube video of an Elon Musk interview and it inspired me to look at the world and find a problem to solve.</p>
         </div>
-        <div id="work-history">
-          <h2>Work History</h2>
-          <table>
-            <tr>
-              <th>Company</th>
-              <td>GrowthLoop</td>
-              <td>Inspired eLearning</td>
-              <td>Valde Capital</td>
-              <td>Self-Employed</td>
-            </tr>
-          </table>
-        </div>
-        <div id="skills">
-        </div>
-
+      </div>
+      <div id="work-history">
+        <h2>Work History</h2>
+        <table>
+          <tr>
+            <th>Company</th>
+            <th>Job Title</th>
+            <th>Tenure</th>
+          </tr>
+          <tr>
+            <td>GrowthLoop</td>
+            <td>Founder/CEO</td>
+            <td>July 2018 - Present</td>
+          </tr>
+          <tr>
+            <td>Inspired eLearning</td>
+            <td>Data Analyst and Special Projects Associate</td>
+            <td>December 2014 - July 2018</td>
+          </tr>
+          <tr>
+            <td>Valde Capital</td>
+            <td>Private Equity Associate</td>
+            <td>October 2013 - December 2014</td>
+          </tr>
+        </table>
+      </div>
+      <div id="skills">
+        <h2>Skills</h2>
       </div>
     </div>
   </body>
