--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p>5 years ago I was an online poker player who didn't know what a startup was. I stumbled upon a YouTube video of an Elon Musk interview and it inspired me to look at the world and find a problem to solve.</p>
         </div>
       </div>
-      <div id="work-history">
+      <section id="work-history">
         <h2>Work History</h2>
         <table>
           <tr>
@@ -57,10 +57,20 @@
             <td>October 2013 - December 2014</td>
           </tr>
         </table>
-      </div>
-      <div id="skills">
+      </section>
+      <section id="skills">
         <h2>Skills</h2>
-      </div>
+        <p>Data Analysis</p>
+        <p>Google AdWords</p>
+        <p>Google Analytics</p>
+        <p>Microsoft Excel</p>
+        <p>Salesforce</p>
+        <p>A/B Testing</p>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>Javascript</p>
+        <p>Financial Modeling</p>
+      </section>
     </div>
   </body>
 </html>
