added contact form

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
         <p>Javascript</p>
         <p>Financial Modeling</p>
       </section>
+      <section id="contact">
+        <h2>If you would like to get in touch, drop me a message:</h2>
+        <form>
+          <label>Name</label>
+          <input></input>
+          <label>Email</label>
+          <input type="email"></input>
+          <label>Message</label>
+          <input></input>
+        </form>
+      </section>
     </div>
   </body>
 </html>
