made message input taller and added submit button

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
           <label>Email</label>
           <input type="email"></input>
           <label>Message</label>
-          <input></input>
+          <input id="message"></input>
+          <button>Submit</button>
         </form>
       </section>
     </div>
