fixed some margins and added some copy to the intro

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </div>
         <div class="hero-right">
           <h1>Ken Ruf</h1>
-          <p>5 years ago I was an online poker player who didn't know what a startup was. I stumbled upon a YouTube video of an Elon Musk interview and it inspired me to look at the world and find a problem to solve.</p>
+          <p>5 years ago I was an online poker player who didn't know what a startup was.</p>
+          <p>I stumbled upon a YouTube video of an Elon Musk interview and it inspired me to look at the world and find a problem to solve.</p>
+          <p>I am passionate about education, specifically my mission is to pop the higher education bubble and work towards a future where every </p>
         </div>
       </div>
       <section id="work-history">
@@ -74,11 +76,11 @@
       <section id="contact">
         <h2>If you would like to get in touch, drop me a message:</h2>
         <form>
-          <label>Name</label>
+          <label>Name:</label>
           <input></input>
-          <label>Email</label>
+          <label>Email:</label>
           <input type="email"></input>
-          <label>Message</label>
+          <label>Message:</label>
           <input id="message"></input>
           <button>Submit</button>
         </form>
